completed project- PSD to HTML Conversion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,7 @@ html {
 #portfolio .nav-link {   
     color: var(--light-color);
     background: var(--dark-color);
+    margin: 0 10px 10px 10px;
 
     &:hover{
         background: var(--primary-color);
